# vn30-clustered-portfolio-optimization

./: .gitignore  README.md  pyproject.toml
data/processed/: clean_ohlcv.csv  corr_matrix.csv  cov_matrix.csv  distance_matrix.csv  portfolio_weights_aggressive.csv  portfolio_weights_static.csv  return_matrix_clean.csv  static_artifact_status.json  ticker_clusters.csv  ticker_clusters_enriched.csv
data/processed/legacy/: portfolio_weights_aggressive_prefeasibility.csv
data/raw/: vn30_stock_data.csv
notebooks/: 00_download_data.ipynb  01_eda.ipynb  02_preprocess.ipynb  03_returns_and_validation.ipynb  04_corr_cluster.ipynb  05_cluster_insight.ipynb  06_markowitz_static.ipynb  07_backtest_static_portfolio.ipynb  08_backtest_rolling_markowitz.ipynb
notebooks/helpers/: __init__.py  cluster_correlation_diagnostics.py  optimal_portfolio_composition_report.py  rolling_cluster_research.py  static_aggressive_targets.py  static_artifact_contract.py
reports/corr_cluster/: k_selection_metrics.csv
reports/eda/: EDA_REPORT.md
reports/preprocess/: incomplete_days.csv  invalid_ohlc_rows.csv  preprocess_report.json  preprocessing_report.json
tests/: test_cluster_correlation_diagnostics.py  test_cluster_insight_notebook_contract.py  test_eda_chart_artifact_contract.py  test_optimal_portfolio_composition_report.py  test_returns_validation_notebook_contract.py  test_rolling_backtest_notebook_contract.py  test_rolling_cluster_research.py  test_static_aggressive_targets.py  test_static_artifact_contract.py
