[project]
name = "vn30-data-mining"
version = "0.1.0"
description = "EDA and raw data preprocessing for VN30 stock OHLCV data"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  # Core data processing
  "pandas>=2.0,<3.0",
  "numpy>=1.24,<2.0",
  # Visualization (EDA)
  "matplotlib>=3.7,<4.0",
  # Jupyter environment
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
  # Useful utilities
  "scipy>=1.10,<2.0",
  "scikit-learn>=1.3,<2.0",
  "tqdm>=4.65",
  "rich>=13.0",
  # Stock data for Vietnam
  "vnstock>=0.2.9",
  # Machine learning
  "scikit-learn>=1.3,<2.0",
  "cvxpy>=1.7.5",
]

[project.optional-dependencies]
dev = [
  "black>=23.0",
  "ruff>=0.1.0",
  "pytest>=7.4",
]

[tool.uv]
# uv sẽ tự quản lý virtual environment cho project

